tests/dataset/tpc-ds/compiler/erlang/q55.error
run: exit status 127
escript: exception error: bad key: price
  in function  map_get/2
     called as map_get(price,
                       #{i =>
                             #{i_item_sk => 3,i_brand_id => 10,
                               i_manager_id => 1},
                         ss => #{item => 3,sold_date => 1,price => 25},
                         d => #{d_date_sk => 1,d_year => 2001,d_moy => 11}})
     *** argument 1: not present in map
  in call from q55_erl__escript__1752__555518__696463__8965:'-main/1-lc$^5/1-1-'/1 (/tmp/q55.erl, line 9)
  in call from q55_erl__escript__1752__555518__696463__8965:'-main/1-lc$^4/1-0-'/1 (/tmp/q55.erl, line 9)
  in call from q55_erl__escript__1752__555518__696463__8965:main/1 (/tmp/q55.erl, line 9)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
