tests/dataset/tpc-ds/compiler/erlang/q55.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2020-01-02T15:04:05Z
% q55.erl - generated from q55.mochi

main(_) ->
    Store_sales = [#{item => 1, sold_date => 1, price => 10}, #{item => 2, sold_date => 1, price => 20}, #{item => 3, sold_date => 1, price => 25}],
    Item = [#{i_item_sk => 1, i_brand_id => 10, i_manager_id => 1}, #{i_item_sk => 2, i_brand_id => 20, i_manager_id => 1}, #{i_item_sk => 3, i_brand_id => 10, i_manager_id => 1}],
    Date_dim = [#{d_date_sk => 1, d_year => 2001, d_moy => 11}],
    Grouped = [#{brand_id => mochi_get(brand_id, Key0), ext_price => lists:sum([mochi_get(price, X) || X <- Val0])} || {Key0, Val0} <- maps:to_list(lists:foldl(fun({Key0, Val0}, Acc0) -> L = maps:get(Key0, Acc0, []), maps:put(Key0, [Val0 | L], Acc0) end, #{}, [{#{brand_id => mochi_get(i_brand_id, I)}, #{ss => Ss, i => I, d => D}} || Ss <- Store_sales, I <- Item, D <- Date_dim, ((mochi_get(item, Ss) == mochi_get(i_item_sk, I)) andalso (mochi_get(i_manager_id, I) == 1)), (mochi_get(sold_date, Ss) == mochi_get(d_date_sk, D))]))],
    Result = [V || {_, V} <- lists:keysort(1, [{[-mochi_get(ext_price, G), mochi_get(brand_id, G)], G} || G <- Grouped])],
    mochi_json(Result),
    (case (Result == [#{brand_id => 10, ext_price => 35}, #{brand_id => 20, ext_price => 20}]) of true -> ok; _ -> erlang:error(test_failed) end).

mochi_get(K, M) ->
    case maps:find(K, M) of
        {ok, V} -> V;
        error ->
            Name = atom_to_list(K),
            case string:tokens(Name, "_") of
                [Pref|_] ->
                    P = list_to_atom(Pref),
                    case maps:find(P, M) of
                        {ok, Sub} when is_map(Sub) -> maps:get(K, Sub);
                        _ -> erlang:error({badkey, K})
                    end;
                _ -> erlang:error({badkey, K})
            end
        end.
    
    mochi_escape_json([]) -> [];
    mochi_escape_json([H|T]) ->
        E = case H of
            $\ -> "\\";
            $" -> "\"";
            _ -> [H]
        end,
        E ++ mochi_escape_json(T).
    
    mochi_to_json(true) -> "true";
    mochi_to_json(false) -> "false";
    mochi_to_json(V) when is_integer(V); is_float(V) -> lists:flatten(io_lib:format("~p", [V]));
    mochi_to_json(V) when is_binary(V) -> "\"" ++ mochi_escape_json(binary_to_list(V)) ++ "\"";
    mochi_to_json(V) when is_list(V), (V =:= [] orelse is_integer(hd(V))) -> "\"" ++ mochi_escape_json(V) ++ "\"";
    mochi_to_json(V) when is_list(V) -> "[" ++ lists:join(",", [mochi_to_json(X) || X <- V]) ++ "]";
    mochi_to_json(V) when is_map(V) -> "{" ++ lists:join(",", ["\"" ++ atom_to_list(K) ++ "\":" ++ mochi_to_json(Val) || {K,Val} <- maps:to_list(V)]) ++ "}".
    
    mochi_json(V) -> io:format("~s
", [mochi_to_json(V)]).
